fixed drop content a tag style to align items at the center

--- a/style.css
+++ b/style.css
@@ -555,7 +555,7 @@ footer ul li a {
     }
 
     .drop-content ul a {
-        width: 100%;
+        /* width: 100%; */
         font-weight: 700;
         margin: 15px;
         font-size: 16px;
